# minsql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml
bindings/: build.rs  c_api.h
docs/: architecture.md  determinism.md  execution.md  features.md  language.md  optimizer.md  quick-reference.md  replication.md  setup.md  sharding.md  storage.md  streaming.md  transactions.md  vision.md
engine/: config.rs  lifecycle.rs  main.rs
engine/analytics/: columnar.rs  materialized_views.rs  mod.rs  query_cache.rs  vectorized.rs
engine/determinism/: clock.rs  mod.rs  replay.rs  scheduler.rs
engine/execution/: engine.rs  expression.rs  mod.rs  sandbox.rs  tuple.rs
engine/ffi/: storage.rs
engine/graphql/: mod.rs  resolver.rs  schema.rs  subscriptions.rs
engine/language/: ast.rs  intent.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
engine/monitoring/: alerts.rs  health_check.rs  mod.rs  performance.rs
engine/planner/: cost.rs  locality.rs  logical.rs  mod.rs  optimizer.rs  physical.rs
engine/protocol/: auth.rs  framing.rs  handshake.rs  mod.rs  server.rs
engine/replication/: consensus.rs  log.rs  mod.rs  state_sync.rs
engine/security/: audit_log.rs  encryption.rs  mod.rs  rbac.rs  row_level_security.rs
engine/sharding/: keyspace.rs  mod.rs  placement.rs  rebalance.rs  routing.rs
engine/streams/: mod.rs  (+4 more)
storage/: entry.c
tools/: build.sh  run-node.sh  start-cluster.sh
validation/: Cargo.toml
(+33 files in other folders)
