[package]
name = "minsql"
version = "0.1.0"
edition = "2021"
authors = ["itzwaris"]
license = "MIT"
description = "A production grade, intent driven database system with deterministic execution"
repository = "https://github.com/itzwaris/minsql"
keywords = ["database", "sql", "storage", "distributed"]
categories = ["database"]

[workspace]
members = [".", "validation"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.7"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
raft = "0.7"
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
lz4 = "1.28"
memmap2 = "0.9"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mman"] }
sysinfo = "0.31"

[build-dependencies]
cc = "1.1"
bindgen = "0.70"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tempfile = "3.12"

[[bin]]
name = "minsql"
path = "engine/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
